tests/ui/traits/object/enforce-supertrait-projection.stderr
error[E0271]: type mismatch resolving `<dyn Trait<B = B, A = A> as SuperTrait>::A == B`
  --> $DIR/enforce-supertrait-projection.rs:9:17
   |
LL | fn transmute<A, B>(x: A) -> B {
   |              -  - expected type parameter
   |              |
   |              found type parameter
LL |     foo::<A, B, dyn Trait<A = A, B = B>>(x)
   |                 ^^^^^^^^^^^^^^^^^^^^^^^ expected type parameter `B`, found type parameter `A`
   |
   = note: expected type parameter `B`
              found type parameter `A`
   = note: a type parameter was expected, but a different one was found; you might be missing a type parameter or trait bound
   = note: for more information, visit https://doc.rust-lang.org/book/ch10-02-traits.html#traits-as-parameters
note: required by a bound in `foo`
  --> $DIR/enforce-supertrait-projection.rs:15:8
   |
LL | fn foo<A, B, T: ?Sized>(x: T::A) -> B
   |    --- required by a bound in this function
LL | where
LL |     T: Trait<B = B>,
   |        ^^^^^^^^^^^^ required by this bound in `foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
